tests/rosetta/out/Java/arbitrary-precision-integers-included-.error
parse: error[P052]: /workspace/mochi/tests/rosetta/x/Mochi/arbitrary-precision-integers-included-.mochi:32:92: unexpected token "-20" (expected ")")
  --> /workspace/mochi/tests/rosetta/x/Mochi/arbitrary-precision-integers-included-.mochi:32:92

 32 | print("5^(4^(3^2)) has", len(s), "digits:", substring(s, 0, 20), "...", substring(s, len(s)-20, len(s)))
    |                                                                                            ^

help:
  Unbalanced parentheses. Check for missing `(` or `)`.